--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,13 @@ WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
+
 # Run stage
+
 FROM openjdk:17-jdk-slim
 WORKDIR /app
 
-COPY --from=build /app/target/DrComputer-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/backend-0.0.1-SNAPSHOT.war backend.war
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java","-jar","backend.war"]
